--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ target
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+
 # Package Files #
 *.jar
 *.war
@@ -23,3 +24,10 @@ target
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+
+# eclipse
+
+.classpath
+.project
+.settings
+build
